--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,27 @@
 *.lai
 *.la
 *.a
+
+# Linux stuff
+.*
+!.gitignore
+*~
+
+# vim
+.*.sw[a-z]
+*.un~
+Session.vim
+.netrwhist
+
+# OS generated files 
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+
