--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Build directory
+build/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -13,7 +16,6 @@
 
 # Linux stuff
 .*
-!.gitignore
 *~
 
 # vim
@@ -32,5 +34,4 @@ Session.vim
 Icon?
 ehthumbs.db
 Thumbs.db
-
 
